--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -3,6 +3,7 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 @import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
 @import "components-font-awesome/scss/font-awesome.scss";
 // endbower
+$primary: #2ecc71;
 
 @import url(http://fonts.googleapis.com/css?family=Courgette);
 @import url(http://fonts.googleapis.com/css?family=Berkshire%20Swash);
@@ -21,16 +22,15 @@ input[type=range] {
     /*removes default webkit styles*/
     -webkit-appearance: none;
 
-    /*fix for FF unable to apply focus style bug */
-    border: 1px solid white;
-
+    outline: none;
     /*required for proper track sizing in FF*/
     width: 300px;
 }
-input[type=range]::-webkit-slider-runnable-track {
+input[type=range]::-webkit-slider-runnable-track,
+input[type=range]::-webkit-slider-runnable-track:focus {
     width: 300px;
     height: 5px;
-    background: #39ca74;
+    background: darken($primary, 8) !important;
     border: none;
     border-radius: 3px;
 }
@@ -40,7 +40,7 @@ input[type=range]::-webkit-slider-thumb {
     height: 16px;
     width: 16px;
     border-radius: 50%;
-    background: #33414b;
+    background: darken($primary, 17);
     margin-top: -4px;
 }
 input[type=range]:focus {
@@ -110,7 +110,6 @@ input[type=range]:focus::-ms-fill-upper {
 
 
 
-$primary: #2ecc71;
 
 html,
 body,
