--- a/views/main.html
+++ b/views/main.html
@@ -216,15 +216,20 @@
       <div class="quote-controls" ng-if="main.poster.lyrics.length > 1">
         <button
           class="controls-btn controls-float"
+          style="display:inline-block;margin-top:0"
           ng-click="main.quotePrev()">
           <i class="fa fa-angle-left"></i> Previous line
         </button>
         <button
+        style="display:inline-block;margin-top:0"
+
           class="controls-btn controls-float"
           ng-click="main.quoteNext()">
           Next line <i class="fa fa-angle-right"></i>
         </button>
         <button
+        style="display:inline-block;margin-top:0"
+
           class="controls-btn controls-float"
           ng-click="main.changeImage()">
           <i class="fa fa-refresh"></i> Change image
